--- a/Mapping_safegraph.ipynb
+++ b/Mapping_safegraph.ipynb
@@ -4265,7 +4265,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
