--- a/place_core.ipynb
+++ b/place_core.ipynb
@@ -4770,17 +4770,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3071: DtypeWarning: Columns (3,20,21,22,23) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
+     ]
+    }
+   ],
+   "source": [
+    "poi_df  = pd.read_csv(r'H:\\Safegraph\\Core Places US (Nov 2020 - Present)\\core_poi\\POI_merged_not_parents_202106.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6003800 entries, 0 to 6003799\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column                     Dtype  \n",
+      "---  ------                     -----  \n",
+      " 0   placekey                   object \n",
+      " 1   safegraph_place_id         object \n",
+      " 2   parent_placekey            float64\n",
+      " 3   parent_safegraph_place_id  object \n",
+      " 4   location_name              object \n",
+      " 5   safegraph_brand_ids        object \n",
+      " 6   brands                     object \n",
+      " 7   top_category               object \n",
+      " 8   sub_category               object \n",
+      " 9   naics_code                 float64\n",
+      " 10  latitude                   float64\n",
+      " 11  longitude                  float64\n",
+      " 12  street_address             object \n",
+      " 13  city                       object \n",
+      " 14  region                     object \n",
+      " 15  postal_code                int64  \n",
+      " 16  iso_country_code           object \n",
+      " 17  phone_number               float64\n",
+      " 18  open_hours                 object \n",
+      " 19  category_tags              object \n",
+      " 20  opened_on                  object \n",
+      " 21  closed_on                  object \n",
+      " 22  tracking_opened_since      object \n",
+      " 23  tracking_closed_since      object \n",
+      " 24  month                      object \n",
+      "dtypes: float64(5), int64(1), object(19)\n",
+      "memory usage: 1.1+ GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "poi_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "target_poi = pd.read_csv(r'H:\\all_aggregate_data\\ipf_output\\Columbia_SC\\2020-11-30_to_2021-04-05_poi_ids.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_poi = target_poi.merge(poi_df, left_on='poi_id', right_on='safegraph_place_id', how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_poi[['safegraph_place_id', 'location_name']].to_csv(r'J:\\extra_safegraph_aggregate_models\\best_202101\\POI_location_name_only.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
-   "name": "python3"
+   "name": "base"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4792,7 +4878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
